----------------------------------------------------------------------
 OmegaT 3.0.6
----------------------------------------------------------------------
   3 Enhancements
   1 Bug fix
   1 Localisation update
----------------------------------------------------------------------
3.0.6 vs. 3.0.5

  Implemented requests:

  - Add Hunspell-based tokenizer 
  https://sourceforge.net/p/omegat/feature-requests/901/

  Other enhancements:

  - More information is logged when plugins are loaded
 
  - Protected text (from the XLIFF filter currently) remains protected even 
when Remove Tags is used

  - The speed of parsing source documents was improved

  Bug fixes: 

  - Ignore content of header in OmegaT's XLIFF filter
  https://sourceforge.net/p/omegat/bugs/625/

  Localisation updates:

  - Italian localisation updated to 3.0.5 (UI, Documentation)

----------------------------------------------------------------------
 OmegaT 3.0.5
----------------------------------------------------------------------
  10 Enhancements
   4 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
3.0.5 vs. 3.0.4 update 2

  Implemented requests:

  - "Insert symbol" auto-completion view
  https://sourceforge.net/p/omegat/feature-requests/862/

  - Add auto-text view to auto-completer 
  https://sourceforge.net/p/omegat/feature-requests/861/

  - Optional source term in auto-completer 
  https://sourceforge.net/p/omegat/feature-requests/887/

  - Priority Glossary 
  https://sourceforge.net/p/omegat/feature-requests/853/

  - Fill TMX on segmentation from sentence to paragraph 
  https://sourceforge.net/p/omegat/feature-requests/825/

  - Do not scroll the glossary pane to the bottom 
  https://sourceforge.net/p/omegat/feature-requests/729/

  Other enhancements:

  - The MyMemory machine translator has been separated into two 
different options: MyMemory (machine) and MyMemory (human)
